	* modules/clx/new-clx/config.h.in: new file
	* modules/clx/new-clx/Makefile.in: use modprep instead of e2d.c
	* modules/clx/new-clx/e2d.c: removed
	* modules/clx/new-clx/configure.in: check for XGetAtomNames()
	* modules/clx/new-clx/clx.f: converted to standard C and modprep.lisp
	* genclisph.d: export much stuff necessary for new-clx

2003-08-27  John Hinsdale <hin@alma.com>
	* modules/oracle/README, oracle.lisp - More documentation

2003-08-26  Sam Steingold  <sds@gnu.org>

	* control.d (MACROLET): fixed a GC-safety bug
	* condition.lisp (define-condition): return name, as per ANSI

2003-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (modular): do not depend on exporting, modprep, clisp.h
	(anymodule): depend on exporting, modprep, clisp.h

2003-08-25  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* utils/comment5.c (main): handle '# ' in traditional comments.
	* makemake.in : do not treat pathname.d specially.

2003-08-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (MODULESDIR, MODULESDIR_, MODULESDIR_M): new vars
	(exporting.fas): depend on ${MODULESDIR_M}exporting.lisp, not the link
	(modular): depend on clisp.h
	* configure: do not link plain files in modules (exporting will
	picked up from here); link modules/* directories even when
	building without FFI because many modules (regexp, syscalls,
	dirkey, clx/new-clx) do not require FFI

2003-08-22  Sam Steingold  <sds@gnu.org>

	* init.lisp (defun): reverted the 2003-08-12 patch: cannot parse
	the signature at macroexpand time, FUNCTION should see it first
	for proper error reporting

2003-08-21  Sam Steingold  <sds@gnu.org>

	* utils/modprep.c: rewrote in lisp
	* modules/regexp/regexi.c (REGEXP-COMPILE): pass a subr instead
	of a symbol to FINALIZE (supported by modprep.lisp)

2003-08-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (create-fun-obj, c-LOAD-TIME-VALUE): use
	*fasoutput-stream* instead of *compiling-from-file* to check
	whether the constant will be read before being evaluated